--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -9,14 +9,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Login to Docker Hub
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Install Go
-        uses: actions/setup-go@v2.1.5
+        uses: actions/setup-go@v5
         with:
-          go-version: 1.17.x
+          go-version: 1.22.x
+          check-latest: true
       - name: install gox
         run: |
           echo "install gox"
@@ -25,10 +26,10 @@ jobs:
         run: |
           echo "install ghr"
           go install github.com/tcnksm/ghr@latest
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 1
-      - name: build ergo
+      - name: build kr
         run: |
           export TZ='Asia/Shanghai'
           export PATH=$PATH:$(go env GOPATH)/bin
